name:                   haskoin-jsonrpc
version:                0.1.0.0
synopsis:               Transport-agnostic JSON-RPC client and server
homepage:               http://github.com/Xeno-Genesis/haskoin-jsonrpc
license:                PublicDomain
license-file:           UNLICENSE
author:                 Jean-Pierre Rupp
maintainer:             root@haskoin.com
category:               Data
build-type:             Simple
cabal-version:          >=1.8

library
    exposed-modules:    Network.Haskoin.JSONRPC.Message
    build-depends:      base == 4.6.*,
                        text,
                        vector,
                        unordered-containers,
                        aeson

Test-Suite haskoin-jsonrpc-tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests
    main-is:            Messages.hs
    build-depends:      base == 4.6.*,
                        bytestring,
                        haskoin-jsonrpc,
                        aeson,
                        HUnit
