name:                   haskoin-jsonrpc
version:                0.1.0.0
synopsis:               Transport-agnostic JSON-RPC client and server
homepage:               http://github.com/Xeno-Genesis/haskoin-jsonrpc
license:                PublicDomain
license-file:           UNLICENSE
author:                 Jean-Pierre Rupp
maintainer:             root@haskoin.com
category:               Data
build-type:             Simple
cabal-version:          >=1.8

library
    exposed-modules:    Network.Haskoin.JSONRPC,
                        Network.Haskoin.JSONRPC.Conduit,
                        Network.Haskoin.JSONRPC.Stratum,
                        Network.Haskoin.JSONRPC.Types
    build-depends:      base                    >= 4.6  && < 4.7,
                        aeson                   >= 0.6  && < 0.7,
                        attoparsec-conduit      >= 1.0  && < 1.1,
                        bytestring              >= 0.10 && < 0.11,
                        conduit                 >= 1.0  && < 1.1,
                        containers              >= 0.5  && < 0.6,
                        haskoin-crypto          >= 0.0  && < 0.1,
                        haskoin-protocol        >= 0.0  && < 0.1,
                        haskoin-util            >= 0.0  && < 0.1,
                        mtl                     >= 2.1  && < 2.2,
                        network-conduit         >= 1.0  && < 1.1,
                        text                    >= 0.11 && < 0.12,
                        transformers            >= 0.3  && < 0.4,
                        unordered-containers    >= 0.2  && < 0.3,
                        vector                  >= 0.10 && < 0.11

Test-Suite haskoin-jsonrpc-tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests
    main-is:            Messages.hs
    build-depends:      base                    >= 4.6  && < 4.7,
                        aeson                   >= 0.6  && < 0.7,
                        attoparsec-conduit      >= 1.0  && < 1.1,
                        bytestring              >= 0.10 && < 0.11,
                        conduit                 >= 1.0  && < 1.1,
                        containers              >= 0.5  && < 0.6,
                        haskoin-crypto          >= 0.0  && < 0.1,
                        haskoin-protocol        >= 0.0  && < 0.1,
                        haskoin-util            >= 0.0  && < 0.1,
                        mtl                     >= 2.1  && < 2.2,
                        network-conduit         >= 1.0  && < 1.1,
                        text                    >= 0.11 && < 0.12,
                        transformers            >= 0.3  && < 0.4,
                        unordered-containers    >= 0.2  && < 0.3,
                        vector                  >= 0.10 && < 0.11,
                        HUnit                   >= 1.2  && < 1.3,
                        haskoin-jsonrpc         >= 0.1  && < 0.2
