name:                   haskoin-jsonrpc
version:                0.1.0.0
synopsis:               Transport-agnostic JSON-RPC client and server
homepage:               http://github.com/Xeno-Genesis/haskoin-jsonrpc
license:                PublicDomain
license-file:           UNLICENSE
author:                 Jean-Pierre Rupp
maintainer:             root@haskoin.com
category:               Data
build-type:             Simple
cabal-version:          >=1.8

library
    exposed-modules:    Network.Haskoin.JSONRPC,
                        Network.Haskoin.JSONRPC.Conduit,
                        Network.Haskoin.JSONRPC.Stratum,
                        Network.Haskoin.JSONRPC.Types
    build-depends:      base >= 4.6,
                        aeson,
                        bytestring,
                        conduit,
                        conduit-extra,
                        containers,
                        haskoin-crypto,
                        haskoin-protocol,
                        haskoin-util,
                        mtl,
                        network-conduit,
                        text,
                        transformers,
                        unordered-containers,
                        vector

Test-Suite haskoin-jsonrpc-tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests
    main-is:            Messages.hs
    build-depends:      base >= 4.6,
                        aeson,
                        bytestring,
                        conduit,
                        conduit-extra,
                        containers,
                        haskoin-crypto,
                        haskoin-protocol,
                        haskoin-util,
                        mtl,
                        network-conduit,
                        text,
                        transformers,
                        unordered-containers,
                        vector,
                        HUnit,
                        haskoin-jsonrpc
