name:                  haskoin-wallet
version:               0.0.1
synopsis:              
    Implementation of a Bitcoin hierarchical deterministric wallet (BIP32).
description:         
    This package provides a command lines application called hw (haskoin
    wallet). It is a lightweight bitcoin wallet featuring BIP32 key management,
    deterministic signatures (RFC-6979) and first order support for
    multisignature transactions. A library API for hw is also exposed.
homepage:              http://github.com/plaprade/haskoin-wallet
bug-reports:           http://github.com/plaprade/haskoin-wallet/issues
license:               PublicDomain
license-file:          UNLICENSE
author:                Philippe Laprade
maintainer:            plaprade+hackage@gmail.com
category:              Bitcoin, Finance, Network
build-type:            Simple
cabal-version:         >= 1.9.2

source-repository head
    type:     git
    location: git://github.com/plaprade/haskoin-wallet.git

library
    exposed-modules:   Network.Haskoin.Wallet,
                       Network.Haskoin.Wallet.Model,
                       Network.Haskoin.Node
    other-modules:     Network.Haskoin.Wallet.Account,
                       Network.Haskoin.Wallet.Root,
                       Network.Haskoin.Wallet.Address,
                       Network.Haskoin.Wallet.Coin,
                       Network.Haskoin.Wallet.Tx,
                       Network.Haskoin.Wallet.Types,
                       Network.Haskoin.Node.HeaderChain,
                       Network.Haskoin.Node.Checkpoints,
                       Network.Haskoin.Node.Peer,
                       Network.Haskoin.Node.PeerManager,
                       Network.Haskoin.Node.Util
    build-depends:     aeson                >= 0.7.0.5  && < 0.8,
                       aeson-pretty         >= 0.7  && < 0.8,
                       base                 >= 4.6  && < 5, 
                       binary               >= 0.7  && < 0.8, 
                       bytestring           >= 0.10.4 && < 0.11, 
                       conduit              >= 1.1  && < 1.2,
                       conduit-extra        >= 1.1  && < 1.2,
                       containers           >= 0.5  && < 0.6,
                       data-default         >= 0.5  && < 0.6,
                       deepseq              >= 1.3  && < 1.4,
                       either               >= 4.3  && < 4.4,
                       haskoin              >= 0.0  && < 0.1, 
                       leveldb-haskell      >= 0.3  && < 0.4,
                       monad-logger         >= 0.3  && < 0.4,
                       mtl                  >= 2.1  && < 2.2,
                       persistent           >= 1.3  && < 1.4,
                       persistent-template  >= 1.3  && < 1.4,
                       persistent-sqlite    >= 1.3  && < 1.4,
                       random               >= 1.0  && < 1.1,
                       resourcet            >= 1.1  && < 1.2,
                       stm                  >= 2.4  && < 2.5,
                       stm-chans            >= 3.0  && < 3.1,
                       stm-conduit          >= 2.4  && < 2.5,
                       text                 >= 1.1  && < 1.2,
                       time                 >= 1.4  && < 1.5,
                       unordered-containers >= 0.2  && < 0.3,
                       vector               >= 0.10 && < 0.11,
                       yaml                 >= 0.8  && < 0.9
    ghc-options:       -Wall -fno-warn-orphans

executable hw
    main-is:           hw.hs
    build-depends:     aeson                >= 0.7.0.5  && < 0.8,
                       aeson-pretty         >= 0.7  && < 0.8,
                       base                 >= 4.6  && < 5, 
                       binary               >= 0.7  && < 0.8, 
                       bytestring           >= 0.10.4 && < 0.11, 
                       conduit              >= 1.1  && < 1.2,
                       conduit-extra        >= 1.1  && < 1.2,
                       containers           >= 0.5  && < 0.6,
                       daemons              >= 0.2  && < 0.3,
                       data-default         >= 0.5  && < 0.6,
                       deepseq              >= 1.3  && < 1.4,
                       directory            >= 1.2  && < 1.3,
                       either               >= 4.3  && < 4.4,
                       haskoin              >= 0.0  && < 0.1, 
                       leveldb-haskell      >= 0.3  && < 0.4,
                       monad-logger         >= 0.3  && < 0.4,
                       mtl                  >= 2.1  && < 2.2,
                       persistent           >= 1.3  && < 1.4,
                       persistent-template  >= 1.3  && < 1.4,
                       persistent-sqlite    >= 1.3  && < 1.4,
                       random               >= 1.0  && < 1.1,
                       resourcet            >= 1.1  && < 1.2,
                       stm                  >= 2.4  && < 2.5,
                       stm-chans            >= 3.0  && < 3.1,
                       stm-conduit          >= 2.4  && < 2.5,
                       text                 >= 1.1  && < 1.2,
                       time                 >= 1.4  && < 1.5,
                       unordered-containers >= 0.2  && < 0.3,
                       vector               >= 0.10 && < 0.11,
                       yaml                 >= 0.8  && < 0.9
    hs-source-dirs:    . script
    ghc-options:       -Wall -fno-warn-orphans

test-suite test-haskoin-wallet
    type:              exitcode-stdio-1.0
    main-is:           Main.hs
    other-modules:     Network.Haskoin.Wallet.Units,
                       Network.Haskoin.Wallet.Tests,
                       Network.Haskoin.Wallet.Arbitrary
    build-depends:     aeson                      >= 0.7.0.5 && < 0.8,
                       aeson-pretty               >= 0.7  && < 0.8,
                       base                       >= 4.6  && < 5, 
                       binary                     >= 0.7  && < 0.8, 
                       bytestring                 >= 0.10.4 && < 0.11, 
                       conduit                    >= 1.1  && < 1.2,
                       conduit-extra              >= 1.1  && < 1.2,
                       containers                 >= 0.5  && < 0.6,
                       data-default               >= 0.5  && < 0.6,
                       deepseq                    >= 1.3  && < 1.4,
                       either                     >= 4.3  && < 4.4,
                       haskoin                    >= 0.0  && < 0.1, 
                       leveldb-haskell            >= 0.3  && < 0.4,
                       monad-logger               >= 0.3  && < 0.4,
                       mtl                        >= 2.1  && < 2.2,
                       persistent                 >= 1.3  && < 1.4,
                       persistent-template        >= 1.3  && < 1.4,
                       persistent-sqlite          >= 1.3  && < 1.4,
                       random                     >= 1.0  && < 1.1,
                       resourcet                  >= 1.1  && < 1.2,
                       stm                        >= 2.4  && < 2.5,
                       stm-chans                  >= 3.0  && < 3.1,
                       stm-conduit                >= 2.4  && < 2.5,
                       text                       >= 1.1  && < 1.2,
                       time                       >= 1.4  && < 1.5,
                       unordered-containers       >= 0.2  && < 0.3,
                       vector                     >= 0.10 && < 0.11,
                       yaml                       >= 0.8  && < 0.9,
                       HUnit                      >= 1.2  && < 1.3,
                       QuickCheck                 >= 2.6  && < 2.7, 
                       test-framework             >= 0.8  && < 0.9, 
                       test-framework-quickcheck2 >= 0.3  && < 0.4, 
                       test-framework-hunit       >= 0.3  && < 0.4 
    hs-source-dirs:    . tests
    ghc-options:       -Wall -fno-warn-orphans

