name:                  haskoin-wallet
version:               0.0.1
synopsis:              
    Implementation of a Bitcoin hierarchical deterministric wallet (BIP32).
description:         
    This package provides a command lines application called hw (haskoin
    wallet). It is a lightweight bitcoin wallet featuring BIP32 key management,
    deterministic signatures (RFC-6979) and first order support for
    multisignature transactions. A library API for hw is also exposed.
homepage:              http://github.com/haskoin/haskoin-wallet
bug-reports:           http://github.com/haskoin/haskoin-wallet/issues
license:               PublicDomain
license-file:          UNLICENSE
author:                Philippe Laprade
maintainer:            plaprade+hackage@gmail.com
category:              Bitcoin, Finance, Network
build-type:            Simple
cabal-version:         >= 1.9.2

source-repository head
    type:     git
    location: git://github.com/haskoin/haskoin-wallet.git

library
    exposed-modules:   Network.Haskoin.Wallet,
                       Network.Haskoin.Wallet.Model,
                       Network.Haskoin.SPV,
                       Network.Haskoin.REST
    other-modules:     Network.Haskoin.Wallet.Account,
                       Network.Haskoin.Wallet.Root,
                       Network.Haskoin.Wallet.Address,
                       Network.Haskoin.Wallet.Tx,
                       Network.Haskoin.Wallet.Types,
                       Network.Haskoin.REST.Types
    build-depends:     aeson                >= 0.8 && < 0.9,
                       base                 >= 4.6  && < 5, 
                       bytestring           >= 0.10.4 && < 0.11, 
                       containers           >= 0.5  && < 0.6,
                       data-default         >= 0.5  && < 0.6,
                       haskoin              >= 0.1  && < 0.2, 
                       leveldb-haskell      >= 0.6  && < 0.7,
                       lifted-base          >= 0.2  && < 0.3,
                       monad-logger         >= 0.3  && < 0.4,
                       mtl                  >= 2.2  && < 2.3,
                       persistent           >= 2.1  && < 2.2,
                       persistent-template  >= 2.1  && < 2.2,
                       persistent-sqlite    >= 2.1  && < 2.2,
                       resourcet            >= 1.1  && < 1.2,
                       stm                  >= 2.4  && < 2.5,
                       stm-chans            >= 3.0  && < 3.1,
                       text                 >= 1.2  && < 1.3,
                       time                 >= 1.4  && < 1.5,
                       wai-extra            >= 3.0  && < 3.1,
                       warp                 >= 3.0  && < 3.1,
                       yesod                >= 1.4  && < 1.5
    ghc-options:       -Wall 

executable hw
    main-is:           hw.hs
    build-depends:     aeson                >= 0.8  && < 0.9,
                       aeson-pretty         >= 0.7  && < 0.8,
                       base                 >= 4.6  && < 5, 
                       bytestring           >= 0.10.4 && < 0.11, 
                       containers           >= 0.5  && < 0.6,
                       daemons              >= 0.2  && < 0.3,
                       data-default         >= 0.5  && < 0.6,
                       directory            >= 1.2  && < 1.3,
                       haskoin              >= 0.1  && < 0.2, 
                       http-types           >= 0.8  && < 0.9,
                       http-client          >= 0.4  && < 0.5,
                       http-conduit         >= 2.1  && < 2.2,
                       leveldb-haskell      >= 0.6  && < 0.7,
                       lifted-base          >= 0.2  && < 0.3,
                       monad-logger         >= 0.3  && < 0.4,
                       mtl                  >= 2.2  && < 2.3,
                       persistent           >= 2.1  && < 2.2,
                       persistent-template  >= 2.1  && < 2.2,
                       persistent-sqlite    >= 2.1  && < 2.2,
                       resourcet            >= 1.1  && < 1.2,
                       stm                  >= 2.4  && < 2.5,
                       stm-chans            >= 3.0  && < 3.1,
                       text                 >= 1.2  && < 1.3,
                       time                 >= 1.4  && < 1.5,
                       unordered-containers >= 0.2  && < 0.3,
                       vector               >= 0.10 && < 0.11,
                       wai-extra            >= 3.0  && < 3.1,
                       warp                 >= 3.0  && < 3.1,
                       yaml                 >= 0.8  && < 0.9,
                       yesod                >= 1.4  && < 1.5
    hs-source-dirs:    . script
    ghc-options:       -Wall 

test-suite test-haskoin-wallet
    type:              exitcode-stdio-1.0
    main-is:           Main.hs
    other-modules:     Network.Haskoin.Wallet.Units,
                       Network.Haskoin.Wallet.Tests,
                       Network.Haskoin.Wallet.Arbitrary
    build-depends:     aeson                      >= 0.8 && < 0.9,
                       base                       >= 4.6  && < 5, 
                       bytestring                 >= 0.10.4 && < 0.11, 
                       containers                 >= 0.5  && < 0.6,
                       haskoin                    >= 0.1  && < 0.2, 
                       monad-logger               >= 0.3  && < 0.4,
                       mtl                        >= 2.2  && < 2.3,
                       persistent                 >= 2.1  && < 2.2,
                       persistent-template        >= 2.1  && < 2.2,
                       persistent-sqlite          >= 2.1  && < 2.2,
                       resourcet                  >= 1.1  && < 1.2,
                       text                       >= 1.2  && < 1.3,
                       time                       >= 1.4  && < 1.5,
                       HUnit                      >= 1.2  && < 1.3,
                       QuickCheck                 >= 2.7  && < 2.8, 
                       test-framework             >= 0.8  && < 0.9, 
                       test-framework-quickcheck2 >= 0.3  && < 0.4, 
                       test-framework-hunit       >= 0.3  && < 0.4 
    hs-source-dirs:    . tests
    ghc-options:       -Wall 

